bindata/oauth-apiserver/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/node-selector: ""
    workload.openshift.io/allowed: "management"
  name: openshift-oauth-apiserver
  labels:
    openshift.io/cluster-monitoring: "true"
