bindata/oauth-apiserver/svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: openshift-oauth-apiserver
  name: api
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: serving-cert
    prometheus.io/scrape: "true"
    prometheus.io/scheme: https
  labels:
    app: openshift-oauth-apiserver
spec:
  selector:
    apiserver: "true"
  ports:
  - name: https
    port: 443
    targetPort: 8443
