bindata/oauth-apiserver/token-review-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: openshift-oauth-apiserver
  name: token-review
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: serving-cert
  labels:
    app: openshift-oauth-apiserver
spec:
  selector:
    apiserver: "true"
  ports:
  - name: https
    port: 443
    targetPort: 8443
