bindata/oauth-apiserver/networkpolicy_namespace_default-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: openshift-oauth-apiserver
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
